# vcore

./: .editorconfig  .gitignore  .safety-policy.yml  Makefile  README.md  alembic.ini  pyproject.toml
.ai/rules/commands/feature_builder/: 1_discuss.md  2_create_prd.md  3_create_tdd.md  4_generate-tasks.md
.ai/rules/commands/github/: create_github_issue.mdc
.ai/rules/commands/quick_tools/: create_quick_tool.mdc
.ai/rules/core/: 0000-cursor-rules.mdc  0001-careful-code-modification.mdc
.ai/rules/docs/: 0500-md-docs.mdc
.ai/rules/frameworks/fastapi/: 4201-database-patterns.mdc
.ai/rules/frameworks/vcore/: 4100-vcore-architecture.mdc  4100-vcore-project-structure.mdc  4101-2-crud-pattern-implementation.mdc  4101-fastapi-handler-organization.mdc  4101-vcore-crud-operations.mdc  4102-2-database-patterns.mdc  4102-model-crud-registration.mdc  4102-vcore-database-models.mdc  4103-python-logging.mdc  4103-vcore-api-endpoints.mdc  4104-import-patterns.mdc  4104-vcore-view-handlers.mdc  4105-crud-pattern-implementation.mdc  4105-vcore-job-management.mdc  4106-vcore-websocket-implementation.mdc  4107-vcore-authentication.mdc  4108-vcore-configuration.mdc  4109-vcore-template-system.mdc  4111-vcore-utilities.mdc  4112-vcore-error-handling.mdc  4113-vcore-logging.mdc  4114-vcore-testing.mdc  4115-vcore-database-migrations.mdc  4116-vcore-frontend-assets.mdc  4117-vcore-dependency-injection.mdc  4118-vcore-validation-patterns.mdc  4119-vcore-quick-tools.mdc  4120-vcore-scripts-integration.mdc  4121-import-patterns.mdc
.ai/rules/languages/css/: 2200-css-bootstrap-guidelines.mdc
.ai/rules/languages/html/: 2300-jinja2-templates.mdc
.ai/rules/languages/javascript/: 2400-javascript-guidelines.mdc  2401-api-utils.mdc
.ai/rules/languages/python/: 2100-python-guidelines.mdc  2101-python-docstrings.mdc  2102-no-server-restart.mdc  2103-python-error-handling.mdc  2104-typehints-keyword-args.mdc
.ai/rules/llm_agents/: 0100-emoji-communication.mdc
.ai/rules/mcp/: 0200-mcp-tool-usage.mdc  0201-browser-tools-mcp.mdc  0210- vibe-tools.mdc
.ai/rules/new/: 4100-vcore-project-structure.mdc  4101-vcore-crud-operations.mdc  4102-vcore-database-models.mdc  4103-vcore-api-endpoints.mdc  4104-vcore-view-handlers.mdc  4105-vcore-job-management.mdc  4106-vcore-websocket-implementation.mdc  4107-vcore-authentication.mdc  4108-vcore-configuration.mdc  4109-vcore-template-system.mdc  4110-vcore-services-logic.mdc  4111-vcore-utilities.mdc  4112-vcore-error-handling.mdc  4113-vcore-logging.mdc  4114-vcore-testing.mdc  4115-vcore-database-migrations.mdc  4116-vcore-frontend-assets.mdc  4117-vcore-dependency-injection.mdc  4118-vcore-validation-patterns.mdc  4119-vcore-quick-tools.mdc  4120-vcore-scripts-integration.mdc  README.md
.ai/rules/standards/testing/: 1005-test-fixtures.mdc  1100-auth-handling-in-tests.mdc
.notes/: notes.md
_app/: __init__.py  __main__.py  app.py  paths.py
_app/models/: settings.py
_app/templating/: env.py
app/: __init__.py  __main__.py  app.py
app/models/: settings.py
app/templating/: env.py
backend/: __init__.py  app.py  paths.py
backend/core/: api_key.py  db.py  env.py  hooks.py  huey.py  logger.py  security.py  server.py  settings.py  websocket.py
backend/crud/: __init__.py  base.py  base_ordered.py  exceptions.py  job.py  job_scheduler.py  user.py
backend/data/: .env
backend/jobs/: __init__.py  execute_job.py  execute_scheduler.py  huey_default.py  huey_reserved.py
backend/logic/: jobs.py
backend/models/: __init__.py  alerts.py  base.py  common.py  job.py  job_scheduler.py  settings.py  tokens.py  user.py
backend/routes/: restrict_to_env.py
backend/routes/api/: __init__.py  deps.py
backend/routes/api/v1/endpoints/: __init__.py  job_queue.py  job_queue_ws.py  job_scheduler.py  (+2 more)
backend/routes/views/: __init__.py
backend/routes/views/jobs/: job_scheduler.py  jobs.py
backend/routes/views/login/: login.py
backend/routes/views/root/: root.py
backend/scripts/: example.py
backend/services/: job_queue.py  job_queue_ws_manager.py  notify.py  scripts.py
backend/tasks/: execute_tasks.py
backend/templating/: __init__.py  context.py  deps.py  env.py  filters.py
backend/utils/: asysnc.py  datetime.py  debug_helpers.py  form_utils.py  git.py  html_sanitizer.py  ip_utils.py  llm_utils.py  system_status.py  uuid.py
docs/: add_to_notes.md  project_overview.md  vcore_framework_overview.md
frontend/static/css/: styles.css  theme.css
frontend/static/css/vcore/: easymde-theme.css  inline-editor.css  sidebar.css  text-colors.css  theme.css  tomselect.css  variables.css
frontend/static/js/: api_config.js  api_utils.js  back_to_top.js  initialization.js  markdown-editor.js  toast.js  ui_helpers.js  utils.js
frontend/static/js/components/: inline-editor.js
frontend/static/js/tools/: log_streamer.js
frontend/tempaltes/base/: _footer.html  _head.html  _navbar.html  _style.html  base.html  container.html  full_width.html  sidebar_left.html
frontend/tempaltes/errors/: 400.html  403.html  500.html
frontend/tempaltes/jobs/: _huey_consumer.html  job_scheduler.html
frontend/tempaltes/login/: login.html  register.html
frontend/templates/base/: _alerts.html  _head.html  _html.html  _sidebar.html  sidebar_left_and_right.html  sidebar_right.html
frontend/templates/dashboard/: _jobs_queue.html  dashboard.html
frontend/templates/errors/: 401.html  404.html  base_error.html
frontend/templates/jobs/: _huey_consumer.html  job_scheduler.html  jobs.html
frontend/templates/logs/: _modal_view_log.html
frontend/templates/quick_tools/: quick_tool_base.html
frontend/templates/scripts/: _scripts_jobs.html
frontend/templates/scripts/modals/: _modal_example.html  _modal_script_base.html
frontend/templates/user/: edit.html  view.html
migrations/: env.py
migrations/versions/: 88bc8d0168f7_init.py
tests/: conftest.py
tests/core/: test_core_server.py
tests/crud/: test_crud_base.py  test_crud_base_ordered.py
tests/routes/: test_all_backend_view_routes.py
tests/routes/api/: test_api_endpoints_login.py  test_api_endpoints_user.py
